--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">UnaBuku</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_home_fragment">Hello Home fragment</string>
-    <string name="hello_orders_fragment">Hello Orders fragment</string>
-    <string name="hello_profile_fragment">Hello Profile fragment</string>
+    <string name="hello_home_fragment">Hello, ik ben de Home fragment</string>
+    <string name="hello_orders_fragment">Hello, ik ben de Orders fragment</string>
+    <string name="hello_profile_fragment">Hello, ik ben de Profile fragment</string>
 </resources>
